--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
                 echo 'Starting to build docker image'
 
                 script {
-                    def customImage = docker.build('qwerty703/qwerty',"./Dockerfile")
+                    def customImage = docker.build('qwerty703/qwerty',"Dockerfile")
                     docker.withRegistry('https://registry.hub.docker.com', 'qwerty703') {
                     customImage.push("${env.BUILD_NUMBER}")
                 }
