--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:18
-WORKDIR /usr/src/app/web-app-tutorial
+WORKDIR /usr/src/app/
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json ./
+COPY package*.json ./docker
 RUN npm install
 COPY . .
 EXPOSE 8080
