--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:19.5.0-alpine
-WORKDIR /usr/src/app/
+WORKDIR /usr/src/app
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json ./docker
+COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE 8080
